--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <link rel = "icon" href = "images/logo.png" type = "image/png">
 </head>
 <body>
-    
+    <!-- header -->
+    <header class = "header" id = "header">
+        <div class = "head-top">
+            <div class = "site-name">
+                <span>GEEKPROBIN</span>
+            </div>
+            <div class = "site-nav">
+                <span id = "nav-btn">MENU <i class = "fas fa-bars"></i></span>
+            </div>
+        </div>
+
+        <div class = "head-bottom flex">
+            <h2>NICE AND COMFORTABLE PLACE TO STAY</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est quos veniam impedit numquam itaque voluptatum, dicta asperiores accusamus, eligendi neque ut incidunt, modi harum molestiae atque natus officia minima.</p>
+            <button type = "button" class = "head-btn">GET STARTED</button>
+        </div>
+    </header>
+    <!-- end of header -->
 </body>
 </html>
