adding a side navbar

--- a/index.html
+++ b/index.html
@@ -28,5 +28,24 @@
         </div>
     </header>
     <!-- end of header -->
+    <!-- side navbar -->
+        <div class = "sidenav" id = "sidenav">
+            <span class = "cancel-btn" id = "cancel-btn">
+                <i class = "fas fa-times"></i>
+            </span>
+
+            <ul class = "navbar">
+                <li><a href = "#header">home</a></li>
+                <li><a href = "#services">services</a></li>
+                <li><a href = "#rooms">rooms</a></li>
+                <li><a href = "#customers">customers</a></li>
+            </ul>
+            <button class = "btn sign-up">sign up</button>
+            <button class = "btn log-in">log in</button>
+        </div>
+    <!-- end of side navbar -->
+    <!-- fullscreen modal -->
+    <div id = "modal"></div>
+    <!-- end of fullscreen modal -->
 </body>
 </html>
