--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <!-- single room -->
             <article class = "room">
                 <div class = "room-image">
-                    <img src = "images/img1.jpg" alt = "room image">
+                    <img src = "https://images.unsplash.com/photo-1566073771259-6a8506099945?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8aG90ZWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt = "room image">
                 </div>
                 <div class = "room-text">
                     <h3>Luxury Rooms</h3>
@@ -150,7 +150,37 @@
             <!-- single room -->
             <article class = "room">
                 <div class = "room-image">
-                    <img src = "images/img2.jpg" alt = "room image">
+                    <img src = "https://media.istockphoto.com/photos/interior-of-a-modern-luxury-hotel-double-bed-bedroom-picture-id1163498940?b=1&k=20&m=1163498940&s=170667a&w=0&h=5TRSRlxZVnU_hVpPTjcbok7xg8Zrl4gmntmkyuAKVSM=" alt = "room image">
+                </div>
+                <div class = "room-text">
+                    <h3>Luxury Rooms</h3>
+                    <ul>
+                        <li>
+                            <i class = "fas fa-arrow-alt-circle-right"></i>
+                            Lorem ipsum dolor sit amet.
+                        </li>
+                        <li>
+                            <i class = "fas fa-arrow-alt-circle-right"></i>
+                            Lorem ipsum dolor sit amet.
+                        </li>
+                        <li>
+                            <i class = "fas fa-arrow-alt-circle-right"></i>
+                            Lorem ipsum dolor sit amet.
+                        </li>
+                    </ul>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse commodi nemo?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla corporis quasi officiis cumque, fugiat nostrum sunt, tempora animi dicta laborum beatae ratione doloremque. Delectus odio sit eius labore, atque quo?</p>
+                    <p class = "rate">
+                        <span>$99.00 /</span> Per Night
+                    </p>
+                    <button type = "button" class = "btn">book now</button>
+                </div>
+            </article>
+            <!-- end of single room -->
+            <!-- single room -->
+            <article class = "room">
+                <div class = "room-image">
+                    <img src = "https://media.istockphoto.com/photos/3d-render-of-luxury-hotel-room-picture-id1277385898?b=1&k=20&m=1277385898&s=170667a&w=0&h=QOzC7zZV5SuiIo2lJ2eOuh18beeZgjkXSiUCvnwffjk=" alt = "room image">
                 </div>
                 <div class = "room-text">
                     <h3>Luxury Rooms</h3>
