--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </li>
                         <li>
                             <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit amet.
+                            Lorem ipsum dolor sit ame
                         </li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse commodi nemo?</p>
