adding a slogan to the header section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class = "header" id = "header">
         <div class = "head-top">
             <div class = "site-name">
-                <span>HOTEL</span>
+                <span>BLING HOTEL</span>
             </div>
             <div class = "site-nav">
                 <span id = "nav-btn">MENU <i class = "fas fa-bars"></i></span>
@@ -22,8 +22,12 @@
         </div>
 
         <div class = "head-bottom flex">
-            <h2>NICE AND COMFORTABLE PLACE TO STAY</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est quos veniam impedit numquam itaque voluptatum, dicta asperiores accusamus, eligendi neque ut incidunt, modi harum molestiae atque natus officia minima.</p>
+            <h2>We Make You Feel Better Than At Home.</h2>
+            <p>The Bling Hotel offers 44 accommodations with safes and coffee/tea makers. Beds feature premium bedding. LED televisions come with premium satellite channels. Bathrooms include showers, slippers, and complimentary toiletries.
+
+                Guests can surf the web using the complimentary wireless Internet access. Business-friendly amenities include desks and phones. Housekeeping is provided daily.
+                
+                Recreational amenities at the hotel include a fitness center.</p>
             <button type = "button" class = "head-btn">GET STARTED</button>
         </div>
     </header>
