added check in and checkout date

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="col-12 text-center" >
+        <form action="/index.html">
+            <lebel for="Check In date">check In date:</lebel>
+            <input type="date" id="Check In" name="Check In" />
+    </div>
+    <br/>
+    <div class="col-12 text-center" >
+        <form action="/index.html">
+            <lebel for="Check out Date">check Out date:</lebel>
+            <input type="date" id="Check Out" name="Check Out" />
+            <div class="col-12 text-center">
+                <input type="submit" name="submit" Value="submit" onclick="selectDate()">
+    </div>
 </body>
 </html>
