--- a/index.html
+++ b/index.html
@@ -143,9 +143,8 @@
                         </li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse commodi nemo?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla corporis quasi officiis cumque, fugiat nostrum sunt, tempora animi dicta laborum beatae ratione doloremque. Delectus odio sit eius labore, atque quo?</p>
                     <p class = "rate">
-                        <span>$99.00 /</span> Per Night
+                        <span>$100.00 /</span> Per Night
                     </p>
                     <button type = "button" class = "btn">book now</button>
                 </div>
@@ -173,9 +172,8 @@
                         </li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse commodi nemo?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla corporis quasi officiis cumque, fugiat nostrum sunt, tempora animi dicta laborum beatae ratione doloremque. Delectus odio sit eius labore, atque quo?</p>
                     <p class = "rate">
-                        <span>$99.00 /</span> Per Night
+                        <span>$500.00 /</span> Per Night
                     </p>
                     <button type = "button" class = "btn">book now</button>
                 </div>
@@ -203,9 +201,8 @@
                         </li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse commodi nemo?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla corporis quasi officiis cumque, fugiat nostrum sunt, tempora animi dicta laborum beatae ratione doloremque. Delectus odio sit eius labore, atque quo?</p>
                     <p class = "rate">
-                        <span>$99.00 /</span> Per Night
+                        <span>$700.00 /</span> Per Night
                     </p>
                     <button type = "button" class = "btn">book now</button>
                 </div>
@@ -214,5 +211,6 @@
         </div>
     </section>
     <!-- The end of room options -->
+    <script src="app.js"></script>
 </body>
 </html>
