--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href = "#header">home</a></li>
                 <li><a href = "#services">services</a></li>
                 <li><a href = "#rooms">rooms</a></li>
-                <li><a href = "#customers">customers</a></li>
+                <li><a href = "#contact us">contact us</a></li>
             </ul>
             <button class = "btn sign-up">sign up</button>
             <button class = "btn log-in">log in</button>
