--- a/chekin.html
+++ b/chekin.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
+    <style>
+        body{
+            background-color: gold;
+        }
+    </style>
     <div class="col-12 text-center" >
         <form action="/index.html">
             <lebel for="Check In date">check In date:</lebel>
