changing some lorem text

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class = "footer-container">
             <div>
                 <h2>About Us </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque sapiente mollitia doloribus provident? Eos quisquam aliquid vel dolorum, impedit culpa.</p>
+                <p>The Bling Hotel is located in Nairobi. Yaya Centre is worth checking out if shopping is on the agenda, while those wishing to experience the area’s popular attractions can visit Giraffe Centre and AFEW Giraffe Centre.</p>
                 <ul class = "social-icons">
                     <li class = "flex">
                         <i class = "fa fa-twitter fa-2x"></i>
