connecting sighup , , checkin and login

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Guests can surf the web using the complimentary wireless Internet access. Business-friendly amenities include desks and phones. Housekeeping is provided daily.
                 
                 Recreational amenities at the hotel include a fitness center.</p>
-            <button type = "button" class = "head-btn">GET STARTED</button>
+            <button type = "button" class = "head-btn"> <a href="checkin.html" target="blank"> GET STARTED </a></button>
         </div>
     </header>
     <!-- end of header -->
@@ -44,8 +44,8 @@
                 <li><a href = "#rooms">rooms</a></li>
                 <li><a href = "#contact us">contact us</a></li>
             </ul>
-            <button class = "btn sign-up">sign up</button>
-            <button class = "btn log-in">log in</button>
+            <button class = "btn sign-up"> <a href="signup.html"> sign up </a></button>
+            <button class = "btn log-in"> <a href="login.html">log in</a></button>
         </div>
     <!-- end of side navbar -->
     <!-- fullscreen modal -->
@@ -146,7 +146,7 @@
                     <p class = "rate">
                         <span>$100.00 /</span> Per Night
                     </p>
-                    <button type = "button" class = "btn">book now</button>
+                    <button type = "button" class = "btn"><a href="checkin.html" target="blank"> book now</a></button>
                 </div>
             </article>
             <!-- end of single room -->
@@ -175,7 +175,7 @@
                     <p class = "rate">
                         <span>$500.00 /</span> Per Night
                     </p>
-                    <button type = "button" class = "btn">book now</button>
+                    <button type = "button" class = "btn"><a href="checkin.html" target="blank"> book now</a></button>
                 </div>
             </article>
             <!-- end of single room -->
@@ -204,7 +204,7 @@
                     <p class = "rate">
                         <span>$700.00 /</span> Per Night
                     </p>
-                    <button type = "button" class = "btn">book now</button>
+                    <button type = "button" class = "btn"><a href="checkin.html" target="blank"> book now</a></button>
                 </div>
             </article>
             <!-- end of single room -->
