--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Guests can surf the web using the complimentary wireless Internet access. Business-friendly amenities include desks and phones. Housekeeping is provided daily.
                 
                 Recreational amenities at the hotel include a fitness center.</p>
-            <button type = "button" class = "head-btn"> <a href="checkin.html" target="blank"> GET STARTED </a></button>
+            <button type = "button" class = "head-btn"> <a href="#rooms"> GET STARTED </a></button>
         </div>
     </header>
     <!-- end of header -->
@@ -42,9 +42,8 @@
                 <li><a href = "#header">home</a></li>
                 <li><a href = "#services">services</a></li>
                 <li><a href = "#rooms">rooms</a></li>
-                <li><a href = "#contact us">contact us</a></li>
+                <li><a href = "contact.html">contact us</a></li>
             </ul>
-            <button class = "btn sign-up"> <a href="signup.html"> sign up </a></button>
             <button class = "btn log-in"> <a href="login.html">log in</a></button>
         </div>
     <!-- end of side navbar -->
@@ -66,7 +65,8 @@
                 </div>
                 <div class = "service-content">
                     <h2>Food Service/ Food Runner</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis tempore officia accusamus asperiores. Illum maxime eligendi necessitatibus laudantium iste nisi pariatur doloremque ut illo similique voluptatum enim distinctio perferendis, ad ipsam aspernatur omnis rem autem ex, reiciendis corporis suscipit!</p>
+                    <p> the businesses, institutions, and companies which prepare meals outside the home. It includes restaurants, school and hospital cafeterias, catering operations, and many other formats.There are many different types of food and beverage service types or procedures, but the major category of the food service is 1) Plate Service, 2) Cart Service, 3) Plater Service, 4) Buffet Service and 5) Family style service.
+                    </p>
                     <button type = "button" class = "btn">Know More</button>
                 </div>
             </article>
@@ -80,7 +80,9 @@
                 </div>
                 <div class = "service-content">
                     <h2>Refreshment</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis tempore officia accusamus asperiores. Illum maxime eligendi necessitatibus laudantium iste nisi pariatur doloremque ut illo similique voluptatum enim distinctio perferendis, ad ipsam aspernatur omnis rem autem ex, reiciendis corporis suscipit!</p>
+                    <p>
+                        making you feel more lively when you have been feeling tired and hot. Lemonade tastes so refreshing on a hot day. a light refreshing breeze. Synonyms and related words.
+                        Refreshment is something you eat, drink, or do to make yourself feel more energetic or stronger. An example of refreshment is having a cup of tea during a break at a conference. noun. 2. The action of refreshing; a means of restoring strength, energy or vigour.</p>
                     <button type = "button" class = "btn">Know More</button>
                 </div>
             </article>
@@ -94,7 +96,7 @@
                 </div>
                 <div class = "service-content">
                     <h2>Housekeeping</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis tempore officia accusamus asperiores. Illum maxime eligendi necessitatibus laudantium iste nisi pariatur doloremque ut illo similique voluptatum enim distinctio perferendis, ad ipsam aspernatur omnis rem autem ex, reiciendis corporis suscipit!</p>
+                    <p>As a hotel housekeeper, you dust and clean hotel rooms as well as the common areas in the hotel where you work. Your responsibilities include restocking supplies, delivering items to guests' rooms, and moving your cart of cleaning supplies and equipment from room to room in the hotel. responsible for cleanliness, maintenance, aesthetic upkeep of rooms, public area, </p>
                     <button type = "button" class = "btn">Know More</button>
                 </div>
             </article>
@@ -108,7 +110,7 @@
                 </div>
                 <div class = "service-content">
                     <h2>Room Security</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis tempore officia accusamus asperiores. Illum maxime eligendi necessitatibus laudantium iste nisi pariatur doloremque ut illo similique voluptatum enim distinctio perferendis, ad ipsam aspernatur omnis rem autem ex, reiciendis corporis suscipit!</p>
+                    <p>Safe rooms are typically equipped with basic emergency and survival items such as a flashlight, blankets, a first-aid kit, water, packaged food, self-defense tools, a gas mask, and a simple portable toilet.</p>
                     <button type = "button" class = "btn">Know More</button>
                 </div>
             </article>
@@ -127,26 +129,22 @@
                     <img src = "https://images.unsplash.com/photo-1566073771259-6a8506099945?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8aG90ZWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt = "room image">
                 </div>
                 <div class = "room-text">
-                    <h3>Luxury Rooms</h3>
+                    <h3>Family Bedroom</h3>
                     <ul>
                         <li>
                             <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit amet.
+                            The most expensive room in our hotel.
                         </li>
                         <li>
                             <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit amet.
-                        </li>
-                        <li>
-                            <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit amet.
+                            Can carry up to 9 people!.
                         </li>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse commodi nemo?</p>
+                    <p>The family bedroom is our best and most luxurious rooms available for families to enjoy together</p>
                     <p class = "rate">
-                        <span>$100.00 /</span> Per Night
+                        <span>$1200.00 /</span> Per Night
                     </p>
-                    <button type = "button" class = "btn"><a href="checkin.html" target="blank"> book now</a></button>
+                    <button type = "button" class = "btn"><a href="#" onclick="myFunction()">Book Now</a></button>
                 </div>
             </article>
             <!-- end of single room -->
@@ -156,26 +154,22 @@
                     <img src = "https://media.istockphoto.com/photos/interior-of-a-modern-luxury-hotel-double-bed-bedroom-picture-id1163498940?b=1&k=20&m=1163498940&s=170667a&w=0&h=5TRSRlxZVnU_hVpPTjcbok7xg8Zrl4gmntmkyuAKVSM=" alt = "room image">
                 </div>
                 <div class = "room-text">
-                    <h3>Luxury Rooms</h3>
+                    <h3>Double Bedrooms</h3>
                     <ul>
                         <li>
                             <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit amet.
+                            The double bedroom carries two people at a time.
                         </li>
                         <li>
                             <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit amet.
-                        </li>
-                        <li>
-                            <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit ame
+                            They are located in the west wing of the hotel.
                         </li>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse commodi nemo?</p>
+                    <p>The double bedrooms are located in the west wing of the hotel facing the beautiful scenery outside.</p>
                     <p class = "rate">
-                        <span>$500.00 /</span> Per Night
+                        <span>$700.00 /</span> Per Night
                     </p>
-                    <button type = "button" class = "btn"><a href="checkin.html" target="blank"> book now</a></button>
+                    <button type = "button" class = "btn"><a href="#" onclick="doubleBed()">Book Now</a></button>
                 </div>
             </article>
             <!-- end of single room -->
@@ -185,26 +179,23 @@
                     <img src = "https://media.istockphoto.com/photos/3d-render-of-luxury-hotel-room-picture-id1277385898?b=1&k=20&m=1277385898&s=170667a&w=0&h=QOzC7zZV5SuiIo2lJ2eOuh18beeZgjkXSiUCvnwffjk=" alt = "room image">
                 </div>
                 <div class = "room-text">
-                    <h3>Luxury Rooms</h3>
+                    <h3>Single Bedrooms</h3>
                     <ul>
                         <li>
                             <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit amet.
+                           They have huge beds
                         </li>
                         <li>
                             <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit amet.
+                            Located in the 3rd and 4th floor of our hotel
                         </li>
-                        <li>
-                            <i class = "fas fa-arrow-alt-circle-right"></i>
-                            Lorem ipsum dolor sit amet.
-                        </li>
+                        
                     </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem repellendus maxime ullam tempore architecto provident unde expedita quam beatae, dolore eligendi molestias sint tenetur incidunt voluptas. Unde corporis qui iusto vitae. Aut nesciunt id iste, cum esse commodi nemo?</p>
+                    <p>Our single bedrooms have 24/7 room service and free foods</p>
                     <p class = "rate">
-                        <span>$700.00 /</span> Per Night
+                        <span>$500.00 /</span> Per Night
                     </p>
-                    <button type = "button" class = "btn"><a href="checkin.html" target="blank"> book now</a></button>
+                    <button type = "button" class = "btn"><a href="#" onclick="singleBed()">Book Now</a></button>
                 </div>
             </article>
             <!-- end of single room -->
